--- a/mqtt/Dockerfile
+++ b/mqtt/Dockerfile
@@ -3,13 +3,15 @@
 FROM resin/rpi-raspbian:jessie
 
 RUN apt-get -q update \
-    && apt-get install -qy wget \
-    && wget -q -O - http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key | apt-key add - \
-    && wget -q -O /etc/apt/sources.list.d/mosquitto-jessie.list http://repo.mosquitto.org/debian/mosquitto-jessie.list \
-    && apt-get -q update \
-    && apt-get install -qy mosquitto \
-    # Remove package lists to free up space
-    && rm -rf /var/lib/apt/lists/*
+    && apt-get -qy install \
+    wget
+
+#    && wget -q -O - http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key | apt-key add - \
+#    && wget -q -O /etc/apt/sources.list.d/mosquitto-jessie.list http://repo.mosquitto.org/debian/mosquitto-jessie.list \
+#    && apt-get -q update \
+#    && apt-get install -qy mosquitto \
+#    # Remove package lists to free up space
+#    && rm -rf /var/lib/apt/lists/*
 
 RUN adduser --system --disabled-password --disabled-login mosquitto
 
