--- a/mqtt/Dockerfile
+++ b/mqtt/Dockerfile
@@ -4,11 +4,10 @@ FROM resin/rpi-raspbian:jessie
 
 RUN apt-get -q update \
     && apt-get -qy install \
-    wget
-
-#    && wget -q -O - http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key | apt-key add - \
-#    && wget -q -O /etc/apt/sources.list.d/mosquitto-jessie.list http://repo.mosquitto.org/debian/mosquitto-jessie.list \
-#    && apt-get -q update \
+    wget \
+    && wget -q -O - http://repo.mosquitto.org/debian/mosquitto-repo.gpg.key | apt-key add - \
+    && wget -q -O /etc/apt/sources.list.d/mosquitto-jessie.list http://repo.mosquitto.org/debian/mosquitto-jessie.list \
+    && apt-get -q update
 #    && apt-get install -qy mosquitto \
 #    # Remove package lists to free up space
 #    && rm -rf /var/lib/apt/lists/*
