--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,15 @@ services:
     build: ./display
     privileged: true
     restart: always
+    depends_on:
+      - mosquitto
 
   mosquitto:
     build: ./mosquitto
     volumes:
       - "mosquitto-config:/mosquitto/config"
       - "mosquitto-data:/mosquitto/data"
-      #- "mosquitto-log:/mosquitto/log"
+      - "mosquitto-log:/mosquitto/log"
     expose:
-      - "1883"
-      - "9001"
+      - "1883:1883"
+      - "9001:9001"
