--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get -q update \
 
 RUN adduser --system --disabled-password --disabled-login mosquitto \
     && mkdir -p /mosquitto/log /mosquitto/data \
-    && chown -rf mosquitto:mosquitto /mosquitto/log /mosquitto/data \
+    && chown -Rf mosquitto:mosquitto /mosquitto/log /mosquitto/data \
     && echo "${TIMEZONE=UTC}" > /etc/timezone \
     && dpkg-reconfigure tzdata
 
