--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     restart: always
     depends_on:
       - mosquitto
+    volumes:
+      - "./grandfromage:/grandfromage:ro"
 
   mosquitto:
     build: ./mosquitto
