move grandfromage code to volume2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     depends_on:
       - mosquitto
     volumes:
-      - "./grandfromage:/grandfromage:ro"
+      - "./grandfromage:/grandfromage"
 
   mosquitto:
     build: ./mosquitto
