--- a/gpsd/Dockerfile
+++ b/gpsd/Dockerfile
@@ -1,11 +1,20 @@
-FROM resin/rpi-raspbian:jessie
+FROM resin/raspberry-pi2-alpine:3.7
 
-# Install needed packages
-RUN apt-get -q update \
-    && apt-get -qy install gpsd \
-    # Remove package lists to free up space
-    && rm -rf /var/lib/apt/lists/*
+RUN apk add gpsd
 
 COPY ./bin/docker-entrypoint.sh /bin/
 
-CMD ["bash", "/bin/docker-entrypoint.sh"]
+CMD ["sh", "/bin/docker-entrypoint.sh"]
+
+
+#FROM resin/rpi-raspbian:jessie
+#
+## Install needed packages
+#RUN apt-get -q update \
+#    && apt-get -qy install gpsd \
+#    # Remove package lists to free up space
+#    && rm -rf /var/lib/apt/lists/*
+#
+#COPY ./bin/docker-entrypoint.sh /bin/
+#
+#CMD ["bash", "/bin/docker-entrypoint.sh"]
