--- a/gpsd/Dockerfile
+++ b/gpsd/Dockerfile
@@ -1,11 +1,11 @@
+# GPSd
+
 FROM resin/raspberry-pi2-alpine:3.7
 
-RUN apk update \
-    && apk add gpsd tzdata \
+RUN apk add --no-cache --update tzdata gpsd \
     && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
     && echo "Europe/London" > /etc/timezone \
     && apk del tzdata
-
 
 COPY ./bin/docker-entrypoint.sh /bin/
 
