remove mosquitto user

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -5,8 +5,8 @@ FROM resin/raspberry-pi2-alpine:3.7
 RUN apk add --no-cache --update tzdata mosquitto \
     && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
     && echo "Europe/London" > /etc/timezone \
-    && apk del tzdata \
-    && adduser -S -D mosquitto
+    && apk del tzdata 
+    #&& adduser -S -D mosquitto
 
 COPY ./config /mosquitto/config
 COPY ./bin/docker-entrypoint.sh /bin/
