try alpine for python

--- a/tracker/Dockerfile
+++ b/tracker/Dockerfile
@@ -1,4 +1,26 @@
-FROM resin/raspberrypi3-alpine-python
+# Tracker
+
+FROM resin/raspberry-pi2-alpine:3.7
+
+RUN apk add --no-cache --update tzdata python py-pip \
+    && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
+    && echo "Europe/London" > /etc/timezone \
+    && apk del tzdata \
+    && pip install --upgrade pip \
+    && pip install paho-mqtt gps3 geopy
+
+
+COPY ./bin/docker-entrypoint.sh /bin/
+COPY ./grandfromage/ /grandfromage/
+
+
+CMD ["bash", "/bin/docker-entrypoint.sh"]
+
+
+
+
+
+# FROM resin/raspberrypi3-alpine-python
 
 #FROM resin/rpi-raspbian:jessie
 
@@ -13,11 +35,5 @@ FROM resin/raspberrypi3-alpine-python
 
 
 # install mqtt and gps python libraries
-RUN pip install paho-mqtt gps3 geopy
+#RUN
 
-
-COPY ./bin/docker-entrypoint.sh /bin/
-COPY ./grandfromage/ /grandfromage/
-
-
-CMD ["bash", "/bin/docker-entrypoint.sh"]
