--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,12 +41,12 @@ services:
     build: ./thermometers
     volumes:
       - "/sys/bus/w1/devices:/sys/bus/w1/devices"
-    devices:
-      - "/dev/mem:/dev/mem"
-    labels:
-      io.resin.features.kernel-modules: '1'
-    depends_on:
-      - mosquitto
+#    devices:
+#      - "/dev/mem:/dev/mem"
+#    labels:
+#      io.resin.features.kernel-modules: '1'
+#    depends_on:
+#      - mosquitto
 
 # devices:
 #      - "/dev/i2c-1:/dev/i2c-1"
