--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       io.resin.features.kernel-modules: '1'
     devices:
       - "/dev/mem:/dev/mem"
-      - "/sys/bus/w1/devices:/sys/bus/w1/devices"
+      #- "/sys/bus/w1/devices:/sys/bus/w1/devices"
 
 
 #    volumes:
