--- a/thermometers/Dockerfile
+++ b/thermometers/Dockerfile
@@ -1,13 +1,14 @@
 # Tracker
 
-FROM resin/raspberry-pi2-alpine:3.7
-
-RUN apk add --no-cache --update tzdata python py-pip \
-    && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
-    && echo "Europe/London" > /etc/timezone \
-    && apk del tzdata \
-    && pip install --upgrade pip \
-    && pip install paho-mqtt
+#FROM resin/raspberry-pi2-alpine:3.7
+FROM resin/rpi-raspbian:jessie
+#
+#RUN apk add --no-cache --update tzdata python py-pip \
+#    && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
+#    && echo "Europe/London" > /etc/timezone \
+#    && apk del tzdata \
+#    && pip install --upgrade pip \
+#    && pip install paho-mqtt
 
 
 COPY ./bin/docker-entrypoint.sh /bin/
