--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,10 +41,14 @@ services:
     build: ./thermometers
     labels:
       io.resin.features.kernel-modules: '1'
+      io.resin.features.supervisor-api: '1'
     devices:
       - "/dev/mem:/dev/mem"
+      - "/dev/gpiomem:/dev/gpiomem"
       #- "/sys/bus/w1/devices:/sys/bus/w1/devices"
     privileged: true
+    cap_add:
+        - SYS_RAWIO
 
 
 #    volumes:
