--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,8 @@ services:
     build: ./thermometers
     ports:
       - "2121:2121"
-      
-#    labels:
-#      io.resin.features.kernel-modules: '1'
+    labels:
+      io.resin.features.kernel-modules: '1'
 
 #      io.resin.features.supervisor-api: '1'
 #    devices:
