--- a/owserver/conf/owfs.conf
+++ b/owserver/conf/owfs.conf
@@ -15,4 +15,4 @@ http: port = 2121
 
 ####################### OWSERVER ########################
 
-server: port = localhost:4304
+server: port = 4304
