--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,36 +37,11 @@ services:
       - "1883:1883"
       - "9001:9001"
 
-  thermometers:
-    build: ./thermometers
+  owserver:
+    build: ./owserver
     ports:
       - "2121:2121"
+      - "4304:4304"
     labels:
       io.resin.features.kernel-modules: '1'
     privileged: true
-
-
-#      io.resin.features.supervisor-api: '1'
-#    devices:
-#      - "/dev/mem:/dev/mem"
-#      - "/dev/gpiomem:/dev/gpiomem"
-#      #- "/sys/bus/w1/devices:/sys/bus/w1/devices"
-#    privileged: true
-#    cap_add:
-#      - SYS_RAWIO
-#      - ALL
-
-
-#    volumes:
-#      - "/sys/bus/w1/devices:/sys/bus/w1/devices"
-#    devices:
-#      - "/dev/mem:/dev/mem"
-#    labels:
-#      io.resin.features.kernel-modules: '1'
-#    depends_on:
-#      - mosquitto
-
-# devices:
-#      - "/dev/i2c-1:/dev/i2c-1"
-#      - "/dev/mem:/dev/mem"
-# privileged: true
