--- a/tracker/Dockerfile
+++ b/tracker/Dockerfile
@@ -7,7 +7,7 @@ RUN apk add --no-cache --update tzdata python py-pip \
     && echo "Europe/London" > /etc/timezone \
     && apk del tzdata \
     && pip install --upgrade pip \
-    && pip install paho-mqtt gps3 geopy
+    && pip install paho-mqtt gps3 geopy pyownet
 
 
 COPY ./bin/docker-entrypoint.sh /bin/
@@ -15,25 +15,3 @@ COPY ./grandfromage/ /grandfromage/
 
 
 CMD ["bash", "/bin/docker-entrypoint.sh"]
-
-
-
-
-
-# FROM resin/raspberrypi3-alpine-python
-
-#FROM resin/rpi-raspbian:jessie
-
-## Install needed packages
-#RUN apt-get -q update \
-#    && apt-get -qy install \
-#    git bc i2c-tools \
-#    pkg-config make gcc \
-#    python-smbus python-dateutil python-pip vim \
-#    # Remove package lists to free up space
-#    && rm -rf /var/lib/apt/lists/*
-
-
-# install mqtt and gps python libraries
-#RUN
-
