add smbus library to tracker

--- a/tracker/Dockerfile
+++ b/tracker/Dockerfile
@@ -6,6 +6,7 @@ RUN apk add --no-cache --update tzdata python py-pip \
     && cp /usr/share/zoneinfo/Europe/London /etc/localtime \
     && echo "Europe/London" > /etc/timezone \
     && apk del tzdata \
+    && apk add --no-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/ py-smbus \
     && pip install --upgrade pip \
     && pip install paho-mqtt gps3 geopy pyownet apscheduler
 
